fix: details paragraph space - slide up jump

--- a/src/styles/partials/blocks/_details.scss
+++ b/src/styles/partials/blocks/_details.scss
@@ -60,4 +60,13 @@
 			}
 		}
 	}
+
+	.wp-block-paragraph::after {
+		content: '';
+		display: block;
+		height: var(--wp--preset--spacing--5);
+		min-height: var(--wp--preset--spacing--5);
+		block-size: var(--wp--preset--spacing--5);
+		overflow: visible;
+	}
 }
